--- a/public/assets/css/Search.css
+++ b/public/assets/css/Search.css
@@ -1,6 +1,11 @@
 body{
     background-color: #f0f1eb;
 }
+hr{
+    color: #0e0d0d;
+    margin-top: 30px;
+    
+}
 .page-title-content h1{
     font-family: Lora;
     font-weight: 400;
@@ -16,23 +21,49 @@ body{
     margin-left: 10px;
 }
 .widget-currency {
-    margin-left: 100px; 
+    margin-left: 70px; 
 }
-.switcher1{
-    width: 1000px;
-    background-color: #f0f1eb;
-    height: 100px;
+.switcher{
+    display: block;
+	font-size: 16px;
+	font-family: sans-serif;
+	color: #444;
+	line-height: 1.3;
+	padding: .6em 1.4em .5em .8em;
+	width: 100%;
+	max-width: 100%; 
+	box-sizing: border-box;
+	margin: 0;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px #f0f1eb(0,0,0,.04);
+	background-color: #f0f1eb;
+}
+.switcher::-ms-expand {
+	display: none;
+}
+.switcher:hover {
+	border-color: #888;
+}
+.switcher:focus {
+	border-color: #aaa;
+	box-shadow: 0 0 0 3px -moz-mac-focusring;
+	color: #222; 
+	outline: none;
+}
+.switcher option {
+	font-weight:normal;
 }
 .widget2{
     background-color: #ffffff;
-    margin-left: 100px;
-    width: 300px;
-    height: 500px;
-    margin-top: 30px;
+    margin-left: 70px;
+    width: 330px;
+    height: 510px;
+    margin-top: 40px;
 }
 .widget_search_form{
     margin-left: 30px;
     padding-top: 50px;
+    box-sizing: border-box;
 }
 .widget_search_check-in-date{
     font-weight: bold;
@@ -41,6 +72,7 @@ body{
 .widget_search_check-in-date input{
     width: 90%;
     height: 40px;
+    border: 1px solid #aaa;
 }
 .widget_search_check-out-date{
     font-weight: bold;
@@ -49,6 +81,7 @@ body{
 .widget_search_check-out-date input{
     width: 90%;
     height: 40px;
+    border: 1px solid #aaa;
 }
 .widget_search-adults-children{
     display: flex;
@@ -57,13 +90,99 @@ body{
 .widget_search-adults{
     font-weight: bold;  
 }
+.widget_search-adults .adults{
+	font-size: 16px;
+	font-family: sans-serif;
+	color: #444;
+	line-height: 1.3;
+	padding: .6em 3.4em .5em .8em;
+	width: 100%;
+	max-width: 100%; 
+	box-sizing: border-box;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px #f0f1eb(0,0,0,.04);
+	background-color: #f0f1eb;
+}
 .widget_search-children{
     margin-left: 30px;
     font-weight: bold;
+}
+.widget_search-children .children{
+    font-size: 16px;
+	font-family: sans-serif;
+	color: #444;
+	line-height: 1.3;
+	padding: .6em 3.4em .5em .8em;
+    margin-left: px;
+	width: 100%;
+	max-width: 100%; 
+	box-sizing: border-box;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px #f0f1eb(0,0,0,.04);
+	background-color: #f0f1eb;
 }
 .widget_search-submit .button{
     width: 90%;
     height: 50px;
     margin-top: 20px;
     background-color: #4c7294;
+    border: none;
+    color: #ffffff;
+
 } 
+.widget_search-submit .button:hover{
+    background-color: #295377;
+}
+.search_results-wapper p{
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 15px;
+}
+.sidebar_content-left{
+    margin-left: 50px;
+    box-sizing: border-box;
+    margin-right: 150px;
+}
+.image-wapper img{
+    width: 340px;
+    height: auto;
+}
+.wapper-image-info{
+    display: flex;
+    margin-top: 37px;
+}
+.info-wapper{
+    box-sizing: border-box;
+    margin-left: 50px;
+}
+.info-wapper-room-1 a{
+    text-decoration: none;
+    color: #000000;
+    font-size: 2em;
+    font-weight: inherit;
+    font-style: inherit;
+    font-family: inherit;
+    vertical-align: baseline;
+}
+.info-wapper p{
+    margin-top: 15px;
+}
+.room-type-attributes{
+    margin-top: 35px;
+}
+.room-type-attributes li{
+    list-style: none;
+}
+.room-type-attributes li:before{
+    content: '\f054';
+    font-family: 'Font Awesome 5 Free';
+    float: left;
+    margin-left: -2em;
+    line-height: 2.8em;
+    font-size: 10px;
+    font-weight: 900;
+    list-style: none;
+}
+.regular-price{
+    padding-top: 30px;
+}
