--- a/public/assets/css/Search.css
+++ b/public/assets/css/Search.css
@@ -5,6 +5,12 @@ hr{
     color: #0e0d0d;
     margin-top: 30px;
 }
+.hover-cursor:hover {
+    cursor: pointer;
+}
+button:hover {
+    cursor: pointer;
+}
 .page-title-content h1{
     font-family: Lora;
     font-weight: 400;
