--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -430,7 +430,10 @@ dfhsdgsdfhdss */
 
 
 
-
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
 #menuOverlay {
     display: none;
     position: fixed;
@@ -438,36 +441,37 @@ dfhsdgsdfhdss */
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Một màu sắc đen với độ mờ 50% */
+    z-index: 9999;
+    background-color: #4D7395;
+    animation: fadeIn 0.3s ease-in;
   }
   
   #menu {
     display: none;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #f9f9f9;
-    padding: 10px;
-    border: 1px solid #ccc;
+    top: 30px;
+    left: 230px;
+    animation: fadeIn 0.3s ease-in;
   }
-  
-  #menu ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  #menu ul li {
-    margin-bottom: 10px;
-  }
-  
-  #menu ul li a {
-    text-decoration: none;
-    color: #333;
-  }
+
   
   #closeMenu {
-    float: right;
     cursor: pointer;
   }
-  
+  .second-header{
+    display: flex;
+  }
+  .second-header-logo{
+    margin-left: 480px;
+    margin-top: -20px;
+  }
+  .second-header-right{
+    margin-left: 300px;
+  }
+  .second-content{
+    margin-top: 100px;
+  }
+.second-content a {
+    font-size: 50px!important;
+}
+
