--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -30,7 +30,7 @@
     width: 70%;
     background-color: white;
     padding: 20px 20px;
-    border: 1px solid black;
+    border-radius: 7px;
 }
 .border-style{
     border: 1px solid black;
@@ -475,3 +475,27 @@ dfhsdgsdfhdss */
     font-size: 50px!important;
 }
 
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
